# Vex

./: .gitignore  README.md  pyproject.toml
backend/app/ai/: __init__.py  debate_engine.py
src/vex/: __init__.py  main.py
src/vex/control/: orchestrator.py
src/vex/data/: market_state.py
src/vex/execution/: engine.py
src/vex/intelligence/: agents.py  consensus.py
src/vex/models/: settings.py
src/vex/risk/: engine.py
vex/: __init__.py  app.py  config.py  consensus.py  models.py  risk.py  state.py
vex-ai/: .gitignore  README.md
vex-ai/.github/workflows/: ci.yml
vex-ai/backend/: Dockerfile  README.md  conftest.py  requirements.txt
vex-ai/backend/app/: config.py  main.py
vex-ai/backend/app/ai/: chat.py  health.py  prompts.py  schemas.py  tools.py
vex-ai/backend/app/api/: routes_ai.py  routes_portfolio.py  routes_risk.py  routes_system.py  routes_trading.py  ws.py
vex-ai/backend/app/auth/: deps.py  jwt.py
vex-ai/backend/app/engine/: engine.py  intents.py  ranking.py  state.py
vex-ai/backend/app/execution/: live_guard.py  paper_broker.py  router.py
vex-ai/backend/app/market/: feed.py  symbols.py
vex-ai/backend/app/risk/: cost_engine.py  kill_switch.py  limits.py  risk_engine.py
vex-ai/backend/app/storage/: db.py  ledger.py  models.py
vex-ai/backend/app/utils/: logging.py  (+1 more)
vex-ai/backend/tests/: test_api_health.py  test_cost_engine.py  test_live_arm_guard.py  test_paper_broker.py  test_risk_edge_cost.py
vex-ai/frontend/: Dockerfile  README.md  package.json
vex-ai/frontend/src/: main.tsx
vex-ai/infra/: README.md  docker-compose.yml
(+14 files in other folders)
